--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -3,18 +3,25 @@ body {
   margin: 0;
   padding: 0;
   background-color: #e8f2fb;
+  overflow: hidden;
 }
 header,
 footer {
   color: white;
   background-color: #121a2f;
   text-align: center;
+  position: fixed;
   padding: 0.2em 0;
+  width: 100%;
+}
+header {
+  z-index: 99;
 }
 footer {
-  position: fixed;
-  width: 100%;
   bottom: 0;
+  height: 2.5em;
+  font-size: 0.9em;
+  z-index: 98;
 }
 main {
   padding: 20px;
@@ -97,7 +104,9 @@ section {
 }
 
 .log-container {
-  height: 400px;
+  min-height: 100px;
+  /* VH - 277 */
+  height: calc(100vh - 240px);
   border: 1px solid #ccc;
   border-radius: 10px;
   overflow-y: auto;
@@ -108,6 +117,7 @@ section {
 }
 
 .log-controls {
+  padding-top: 10px;
   margin-bottom: 10px;
   display: flex;
   gap: 10px;
