--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -27,9 +27,9 @@ main {
   padding: 20px;
 }
 section {
+  margin-top: 80px;
   margin-bottom: 20px;
 }
-
 
 .bx {
   font-size: 50px;
@@ -42,7 +42,6 @@ section {
   left: 0.5em;
   cursor: pointer;
 }
-
 
 /* The side navigation menu */
 .sidenav {
@@ -59,12 +58,12 @@ section {
 }
 
 /* The navigation menu links */
-.sidenav-content{
+.sidenav-content {
   margin-top: 27px;
 }
 
 .sidenav a {
-  padding: 8px 8px 8px 32px;  
+  padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
@@ -106,13 +105,13 @@ section {
 .log-container {
   min-height: 100px;
   /* VH - 277 */
-  height: calc(100vh - 240px);
+  height: calc(100vh - 320px);
   border: 1px solid #ccc;
   border-radius: 10px;
   overflow-y: auto;
   padding: 10px;
   background-color: #86909c;
-  font-family: 'Courier New', monospace;
+  font-family: "Courier New", monospace;
   font-size: 14px;
 }
 
@@ -197,5 +196,26 @@ section {
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidenav a {font-size: 18px;}
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+
+#map {
+  min-height: 300px;
+  height: calc(100vh - 220px);
+  width: 100%;
+  border-radius: 25px;
+  z-index: 0;
+}
+
+.stand-info {
+  font-weight: bold;
+}
+
+.legend {
+  background: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
