--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -106,6 +106,26 @@ section {
   transition: 0.3s;
 }
 
+.container {
+  display: flex;
+  gap: 20px;
+}
+
+.subContainer {
+  /* Make element be tiled vertically inside container */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+
 .log-container {
   min-height: 100px;
   /* VH - 277 */
@@ -253,8 +273,9 @@ section {
 
 
 #reportsChart {
-  width: 400px !important;
+  width: 450px !important;
   height: 260px !important;
   display: block;
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
