--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -115,7 +115,6 @@ H1 {
 }
 
 .subContainer {
-  /* Make element be tiled vertically inside container */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -266,19 +265,20 @@ H1 {
 }
 
 .reports-chart-wrap {
-  display: flex;
   justify-content: center;
-  width: 500px;
-  background-color: #FFFFFF;
-  border-radius: 10px;
-  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.2);
+  max-width: 800px;
+  width: 800px;
+  height: 500px;
 }
 
 
 #reportsChart {
-  width: 450px !important;
-  height: 260px !important;
+  width: 100%;
+  height: 100%;
+  max-width: 700px;
+  max-height: 400px;
   display: block;
   margin-top: 20px;
   margin-bottom: 20px;
+  z-index: 500;
 }
