--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -180,6 +180,7 @@ body.dark-mode .sidenav a:hover {
   width: 100%;
   max-width: 500px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  font-family: 'Fira Code', monospace;
 }
 body.dark-mode .subContainer {
   background-color: #5f5f5f;
