--- a/viewer/styles.scss
+++ b/viewer/styles.scss
@@ -191,6 +191,7 @@ body.dark-mode .subContainer {
 
 .status-container {
   display: grid;
+  justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
 }
