--- a/viewer/styles.scss
+++ b/viewer/styles.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #e8f2fb;
-  overflow: hidden;
+  overflow: auto;
 }
 body.dark-mode {
   background-color: #414141;
