--- a/viewer/styles.css
+++ b/viewer/styles.css
@@ -1879,22 +1879,22 @@ body.dark-mode .letter::after {
     transform: rotateX(0deg);
   }
   20% {
-    content: "E";
+    content: "N";
     transform: rotateX(360deg);
   }
   40% {
     color: #afafaf;
-    content: "Q";
+    content: "O";
     transform: rotateX(0deg);
   }
   60% {
     color: #afafaf;
-    content: "6";
+    content: "Y";
     transform: rotateX(360deg);
   }
   80% {
     color: #afafaf;
-    content: "3";
+    content: "V";
     transform: rotateX(0deg);
   }
   100% {
@@ -2125,6 +2125,7 @@ body.dark-mode .renewButton:hover {
   top: 6px; /* small inset so background peek aligns with rounded row */
   bottom: 6px;
   width: 0;
+  height: 50px;
   pointer-events: none;
   display: flex;
   align-items: center;
