--- a/viewer/styles.scss
+++ b/viewer/styles.scss
@@ -796,6 +796,11 @@ body.dark-mode .performance-toggle.active {
   justify-content: center;
 }
 
+.connectedLayout {
+  display: flex;
+  flex-direction: column;
+}
+
 #loginButton {
   padding: 15px 40px;
   font-size: 20px;
@@ -822,6 +827,7 @@ body.dark-mode #loginButton:hover {
 #selfAPIKey {
   font-family: 'Fira Code', monospace;
   letter-spacing: 1px;
+  margin-bottom: 10px;
   margin-top: 1px;
   padding: 8px 20px;
   border-radius: 10px;
