--- a/viewer/styles.scss
+++ b/viewer/styles.scss
@@ -897,7 +897,7 @@ body.dark-mode #generateAPIKeyButton:hover {
   margin-top: 20px;
   max-width: 100%;
   min-width: 330px;
-  height: calc(100vh - 400&px);
+  height: calc(100vh - 400px);
   min-height: 250px;
   overflow: hidden;
 }
