--- a/viewer/styles.scss
+++ b/viewer/styles.scss
@@ -1114,6 +1114,16 @@ body.dark-mode #apiKeyListTable tbody tr .swipe-indicator.right {
   header {
     min-height: 80px;
   }
+  .status-container {
+    grid-template: none;
+  }
+  .airport-display {
+    max-width: 310px;
+    overflow-x: hidden;
+  }
+  .letter, .letter::before, .letter::after {
+    font-size: 16px;
+  }
 }
 
 @media screen and (max-height: 450px) {
